while loop prompt for NaNs
fixed a typo in the file address, console.logged to check if the code was generating a random number with no decimals - all good. added a while loop in case a NaN is typed, so a prompt is looped until an actual number is typed in.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Guess what?</title>
   </head>
   <body>
-    <script src="/app.js"></script>
+    <h1>Guess what?</h1>
+    <script src="app.js"></script>
   </body>
 </html>
